ingress/dep.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: django-deployment

  namespace: ingress-nginx

  labels:
    app: web

spec:
  replicas: 2

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
        - name: web-2
          image: django:1.1
          ports:
           - containerPort: 8000
