ingress/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: minimal-ingress
  namespace: ingress-nginx

  # annotations:

  #   nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  ingressClassName: nginx

  rules:
  - host: anjalikshatriya.com
    http:

      paths:

      - path: /

        pathType: Prefix

        backend: 

          service:

            name: service

            port:

              number: 80
